--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "mews/captcha": "^3.1"
+        "mews/captcha": "^3.1",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
